tests/snapshots/tui_snapshot_test__tui_snapshots__call_flow_basic.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Current Mode: Online (any)    Dialogs: 3 (3 displayed)
 Match Expression:     BPF Filter:
 Display Filter:
┌ Call Flow: call-1@test ──────────────────────────────────────────────────────────────────────────┐
│             10.0.0.1:5060                                 10.0.0.2:5060                          │
│                   |                                             |                                │
│12:00:00           |          -- INVITE ------------->         |                                  │
│12:00:01           |          <-------- 180 Ringing --         |            PDD: 1000ms           │
│12:00:02           |          <------------- 200 OK --         |                                  │
│12:01:02           |          -- BYE ---------------->         |                                  │
│                   |                                             |                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc Back  Enter Raw  F2 Save  F5 Compare  F7 Filter  F9 ClearFilter
