tests/snapshots/tui_snapshot_test__tui_snapshots__call_flow_detail_scrollbar_on_overflow.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 Time: Delta from previous | SDP: Hidden | Color: Method | Detail: 40% | Focus: Ladder (Tab)
             10.0.0.1:5060                    10.0.0.2:5060█┌ [1/4] INVITE ────────────────────────█
             │                                            │█│INVITE sip:1002@example.com SIP/2.0   █
     +0.000s │───────────────── INVITE ──────────────────▶│║│From: "1001" <sip:1001@example.com>;ta║
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 180 Ringing ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│║│g=t1                                  ║
             │                                            │║│To: "1002" <sip:1002@example.com>     ║
             10.0.0.1:5060                    10.0.0.2:5060║└──────────────────────────────────────║
Esc Back  F1 Help  ↑↓ Move  Enter Raw  d SDP  t Time  c Color  R Detail
