tests/snapshots/tui_snapshot_test__tui_snapshots__call_flow_extended_flow.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 Extended flow: on (multi-leg)
             10.0.0.1:5060                    10.0.0.2:5060 ┌ [1/4] INVITE ────────────────────────┐
             │                                            │ │INVITE sip:1002@example.com SIP/2.0   │
     +0.000s │───────────────── INVITE ──────────────────▶│ │From: "1001" <sip:1001@example.com>;ta│
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 180 Ringing ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│ │g=t1                                  │
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 200 OK ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│ │To: "1002" <sip:1002@example.com>     │
    +60.000s │─────────────────── BYE ───────────────────▶│ │Call-ID: call-1@test                  │
                                                            │CSeq: 1 INVITE                        │
                                                            │Content-Length: 0                     │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
             │                                            │ │                                      │
             10.0.0.1:5060                    10.0.0.2:5060 └──────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Move  Enter Raw  d SDP  t Time  c Color  R Detail
