tests/snapshots/tui_snapshot_test__tui_snapshots__call_flow_raw_preview_off.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 Detail pane: off
             10.0.0.1:5060                                                            10.0.0.2:5060
             │                                                                                    │
     +0.000s │───────────────────────────────────── INVITE ──────────────────────────────────────▶│
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 180 Ringing ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 200 OK ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│
    +60.000s │─────────────────────────────────────── BYE ───────────────────────────────────────▶│


















             │                                                                                    │
             10.0.0.1:5060                                                            10.0.0.2:5060
Esc Back  F1 Help  ↑↓ Move  Enter Raw  d SDP  t Time  c Color  R Detail
